--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -42,7 +42,7 @@
 			<version>0.18.0</version>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>io.opentracing.brave</groupId>
 			<artifactId>brave-opentracing</artifactId>
 			<version>0.20.0</version>
@@ -51,8 +51,38 @@
 			<groupId>io.zipkin.reporter</groupId>
 			<artifactId>zipkin-sender-okhttp3</artifactId>
 			<version>0.10.0</version>
-		</dependency>
+		</dependency> -->
 
+        <dependency>
+            <groupId>com.lightstep.tracer</groupId>
+            <artifactId>lightstep-tracer-jre</artifactId>
+            <version>0.14.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lightstep.tracer</groupId>
+            <artifactId>tracer-grpc</artifactId>
+            <version>0.15.9</version>
+        </dependency>
+        <dependency>
+           <groupId>com.lightstep.tracer</groupId>
+           <artifactId>tracer-okhttp</artifactId>
+           <version>0.15.9</version>
+        </dependency>
+		<dependency>
+			<groupId>io.opentracing</groupId>
+			<artifactId>opentracing-api</artifactId>
+			<version>0.31.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.opentracing</groupId>
+			<artifactId>opentracing-util</artifactId>
+			<version>0.31.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.opentracing</groupId>
+			<artifactId>opentracing-noop</artifactId>
+			<version>0.31.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
